update hero button width on moblile fixes text cutoff on narrower devices

--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -52,7 +52,7 @@
         .btn{
           font-weight: 600;
           @include mobile{
-            width: 50%;
+            width: 70%;
             margin: 0 auto;
             display: block;
           }
